Added spans, still working on the ContainerVertices